<resources>
    <string name="app_name">DicodingStorySubmission</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="not_signed_up">Not signed up?</string>
    <string name="signed_up">Have signed up?</string>
    <string name="name">Name</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="popup_button">Popup FAB</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="toolbar_text">Stories</string>
    <string name="exit_to_main_activity">Exit to main activity</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="enter_description">Enter description...</string>
    <string name="upload">Upload</string>
    <string name="username">Username</string>
    <string name="description">Description</string>
    <string name="a_photo_from_story">A photo from story</string>
    <string name="ic_person">ic_person</string>
    <string name="ic_description">ic_description</string>
    <string name="dicoding_story_app">Dicoding Story App</string>
    <string name="sign_in">Sign In</string>
    <string name="photo_detail">Photo Detail</string>
</resources>